--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,4 +13,11 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
+  <context-param>
+    <param-name>logLevel</param-name>
+    <param-value>INFO</param-value>
+  </context-param>
+  <listener>
+    <listener-class>com.sdi.listener.LoggingInitialization</listener-class>
+  </listener>
 </web-app>
